fix: topbar user dropdown not showing, close #92

--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -230,3 +230,6 @@
         }
     }
 }
+#topbarUserDropdown:after {
+    margin-left: 1rem;
+}
